--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,810 @@
+
+
+@import "tailwindcss";
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Roboto&family=Source+Sans+Pro:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
+
+
+
+
+
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* bcg */
+  --toggle-color: #f4f6f0;
+  --nav-bcg: linear-gradient(rgba(160, 160, 160, 0.1), rgba(160, 160, 160, 0.1)),
+    url(./images/hero/hero-bcg-light.svg) center repeat fixed;
+  --hero-bcg: linear-gradient(
+      rgba(160, 160, 160, 0.1),
+      rgba(160, 160, 160, 0.1),
+      rgba(250, 250, 250, 0.5)
+    ),
+    url(./images/hero/hero-bcg-light.svg) center repeat;
+  --contact-bcg: linear-gradient(
+      rgba(160, 160, 160, 0.3),
+      rgba(160, 160, 160, 0.3)
+    ),
+    url(./images/contact/contact-bcg.png) center repeat;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* white colors */
+  --clr-body-bcg: #fff;
+  --clr-body-bcg-2: rgb(250, 250, 250);
+  --clr-body-bcg-3: #f0f0f0;
+  /* black colors  */
+  --clr-font: #101114;
+  --clr-font-2: #191a1d;
+  --clr-font-3: #252525;
+  /* primary colors */
+  --clr-primary: #008037;
+  --clr-secondary: #00995e;
+  --clr-tertiary: #a2e2be;
+  /* shadows */
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  /* other colors */
+  --clr-white: #fff;
+  --clr-black: #222;
+  --clr-primary-gradient: linear-gradient(
+    to top right,
+    var(--clr-secondary),
+    var(--clr-primary)
+  );
+  /* darkest grey - used for headings */
+  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-grey-2: hsl(211, 39%, 23%);
+  --clr-grey-3: hsl(209, 34%, 30%);
+  --clr-grey-4: hsl(209, 28%, 39%);
+  /* grey used for paragraphs */
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: #eef3f7;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --clr-tools-text: var(--clr-grey-3);
+  /* font families */
+  --ff-primary: 'Roboto', sans-serif;
+  --ff-secondary: 'Ubuntu', sans-serif;
+  --ff-tertiary: 'Poppins', sans-serif;
+  /* transitions */
+  --transition: all 0.3s linear;
+  --long-transition: all 1s ease;
+  /* spacing */
+  --spacing: 0.2rem;
+  /* radius */
+  --radius: 0.25rem;
+  /* width */
+  --max-width: 1280px;
+  --fixed-width: 560px;
+}
+.dark {
+  /* bcg */
+  --toggle-color: #fce570;
+  --nav-bcg: linear-gradient(rgba(4, 1, 1, 0.1), rgba(4, 1, 1, 0.1)),
+    url(./images/hero/hero-bcg-dark.svg) center repeat fixed;
+  --hero-bcg: linear-gradient(
+      rgba(4, 1, 1, 0.1),
+      rgba(5, 5, 5, 0.1),
+      rgba(4, 1, 1, 0.1)
+    ),
+    url(./images/hero/hero-bcg-dark.svg) center repeat;
+  --contact-bcg: linear-gradient(
+      to bottom right,
+      rgba(20, 20, 20, 0.75),
+      rgba(20, 20, 20, 0.5),
+      rgba(20, 20, 20, 0.75)
+    ),
+    url(./images/contact/contact-bcg.png) center repeat;
+
+  /* black colors */
+  --clr-body-bcg: #0a0a0b;
+  --clr-body-bcg-2: #0e0d0d;
+  --clr-body-bcg-3: #181717;
+  /* white colors  */
+  --clr-font: rgba(255, 255, 255, 0.9);
+  --clr-font-2: #f5f6f7;
+  --clr-font-3: #f0f0f0;
+
+  --clr-tools-text: var(--clr-grey-7);
+  /* shadows */
+  --light-shadow: 0 2px 5px rgba(255, 255, 255, 0.2);
+  --dark-shadow: 0 2px 5px rgba(255, 255, 255, 0.5);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.light {
+  /* bcg */
+  --toggle-color: #f4f6f0;
+  --nav-bcg: linear-gradient(rgba(160, 160, 160, 0.1), rgba(160, 160, 160, 0.1)),
+    url(./images/hero/hero-bcg-light.svg) center repeat fixed;
+  --hero-bcg: linear-gradient(
+      rgba(160, 160, 160, 0.1),
+      rgba(160, 160, 160, 0.1),
+      rgba(250, 250, 250, 0.5)
+    ),
+    url(./images/hero/hero-bcg-light.svg) center repeat;
+  --contact-bcg: linear-gradient(
+      rgba(160, 160, 160, 0.3),
+      rgba(160, 160, 160, 0.3)
+    ),
+    url(./images/contact/contact-bcg.png) center repeat;
+
+  /* white colors */
+  --clr-body-bcg: #fff;
+  --clr-body-bcg-2: rgb(250, 250, 250);
+  --clr-body-bcg-3: #f0f0f0;
+  /* black colors  */
+  --clr-font: #101114;
+  --clr-font-2: #191a1d;
+  --clr-font-3: #252525;
+
+  --clr-tools-text: var(--clr-grey-3);
+  /* shadows */
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
-a:hover {
-  color: #535bf2;
+
+/*
+===============
+Global Styles
+===============
+*/
+html {
+  scroll-behavior: smooth;
+}
+
+html::-webkit-scrollbar {
+  width: 1em;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: var(--clr-secondary);
+  transition: var(--transition);
+}
+html::-webkit-scrollbar-thumb:hover {
+  background: var(--clr-secondary);
+  transition: var(--transition);
+}
+html::-webkit-scrollbar-track {
+  background: #ccc;
+}
+
+::selection {
+  color: var(--clr-white);
+  background: var(--clr-secondary);
+}
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: var(--ff-tertiary);
+  background: var(--clr-body-bcg);
+  color: var(--clr-font);
+  line-height: 1.5;
+  font-size: 0.875rem;
+  cursor: url('./images/cursor.svg'), auto;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+ul {
+  list-style-type: none;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+a {
+  text-decoration: none;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
+img:not(.nav-logo) {
+  width: 100%;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+img {
+  display: block;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+h1 {
+  font-size: 2.8rem;
+}
+h2 {
+  font-size: 1.9rem;
+}
+h3 {
+  font-size: 1.2rem;
+}
+h4,
+.skills-title,
+.project-title {
+  font-size: 1rem;
+}
+p {
+  margin-bottom: 1.25rem;
+  color: var(--clr-font);
+}
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.75rem;
   }
-  a:hover {
-    color: #747bff;
+  h2 {
+    font-size: 2.5rem;
   }
-  button {
-    background-color: #f9f9f9;
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4,
+  .skills-title,
+  .project-title {
+    font-size: 1.1rem;
+  }
+  body {
+    font-size: 1rem;
+    overflow-x: hidden;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
+}
+
+/* global classes */
+
+.btn {
+  text-transform: uppercase;
+  background: var(--clr-primary);
+  color: var(--clr-white);
+  padding: 0.5rem 1.25rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  font-weight: 700;
+  transition: var(--transition);
+  font-size: 1rem;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 2rem;
+}
+.btn:hover {
+  background: var(--clr-secondary);
+}
+@media screen and (max-width: 548px) {
+  .btn {
+    font-size: 0.75rem;
+  }
+}
+
+/* section */
+
+.section {
+  padding: 5rem 0;
+}
+
+.section-center {
+  padding: 1rem 0;
+  width: 90vw;
+  margin: 0 auto;
+  max-width: var(--max-width);
+}
+@media screen and (min-width: 992px) {
+  .section-center,
+  .contact-center {
+    width: 95vw;
+  }
+}
+
+.underline {
+  width: 7rem;
+  height: 0.25rem;
+  margin-top: 0.4rem;
+  background: var(--clr-primary);
+  margin-left: auto;
+  margin-right: auto;
+  transition: var(--long-transition);
+}
+.section-title:hover .underline {
+  background: var(--clr-primary-gradient);
+  width: 13rem;
+}
+
+.section-title {
+  font-family: var(--ff-primary);
+  margin-bottom: 4rem;
+  text-align: center;
+  text-transform: capitalize;
+  padding: 0 1rem;
+}
+.section-title span {
+  font-weight: bolder;
+  text-shadow: 1px 1px 1px var(--clr-tertiary);
+}
+
+.loader {
+  margin: 10rem auto;
+  width: 5rem;
+  height: 5rem;
+  border: 4px solid var(--clr-grey-9);
+  border-radius: 50%;
+  border-top-color: var(--clr-secondary);
+  animation: loader 1s linear infinite;
+}
+@keyframes loader {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+
+.toggle-theme {
+  display: none;
+  align-self: center;
+  line-height: 0;
+  cursor: pointer;
+}
+.toggle-theme .fa {
+  font-size: 1.25rem;
+  color: var(--toggle-color);
+  background: transparent;
+}
+
+nav {
+  background: var(--clr-body-bcg);
+  padding: 0.75rem 1rem;
+  z-index: 100;
+}
+.nav-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--clr-body-bcg);
+  box-shadow: var(--light-shadow);
+}
+.nav-center {
+  margin: 0 auto;
+  max-width: var(--max-width);
+}
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-btn {
+  align-self: center;
+  font-size: 2rem;
+  color: var(--clr-primary);
+  background: transparent;
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+  outline: none;
+  transform: rotate(90deg);
+  animation: bounce 1.5s linear infinite;
+  line-height: 0;
+}
+.nav-btn:hover {
+  color: var(--clr-secondary);
+}
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+    color: var(--clr-primary);
+  }
+  50% {
+    transform: scale(1.1);
+    color: var(--clr-secondary);
+  }
+  100% {
+    transform: scale(1);
+    color: var(--clr-primary);
+  }
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.logo img {
+  height: 3rem;
+  width: 3rem;
+}
+
+.logo h5 {
+  color: var(--clr-primary);
+  font-size: 1.75rem;
+  letter-spacing: -1px;
+  transition: var(--transition);
+}
+.logo h5:hover {
+  color: var(--clr-secondary);
+}
+
+.nav-links {
+  display: none;
+  width: 100%;
+  max-width: 450px;
+  padding: 0 1rem;
+}
+.nav-links .link {
+  text-transform: uppercase;
+  color: var(--clr-secondary);
+  font-weight: bold;
+  text-shadow: 1px 1px 1px var(--clr-body-bcg);
+  transition: var(--transition);
+  letter-spacing: 2px;
+  padding: 0.1rem 0 0.5rem;
+  position: relative;
+}
+.nav-links .link::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background: var(--clr-secondary);
+  transition: var(--transition);
+}
+
+.nav-links .link:hover {
+  color: var(--clr-primary);
+}
+.nav-links .link:hover::after {
+  width: 100%;
+}
+
+@media screen and (min-width: 792px) {
+  nav {
+    background: var(--nav-bcg);
+  }
+  .nav-center {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    gap: 1rem;
+    align-items: center;
+  }
+  .nav-btn {
+    display: none;
+  }
+  .nav-links {
+    justify-self: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 4rem;
+  }
+  .toggle-theme {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+}
+
+
+
+/* 
+======================
+SIDEBAR
+======================
+*/
+
+.sidebar .toggle-theme {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin-left: 1rem;
+}
+
+.sidebar-header-col {
+  display: flex;
+  align-items: center;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--clr-body-bcg-3);
+  transition: var(--transition);
+  transition-duration: 0.2s;
+  transform: translate(-100%);
+  z-index: -1;
+}
+.show-sidebar {
+  transform: translate(0);
+  z-index: 999;
+}
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+.close-btn {
+  font-size: 2rem;
+  color: rgb(226, 39, 39);
+  background: transparent;
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+  outline: none;
+}
+.close-btn:hover {
+  color: rgb(194, 14, 14);
+}
+
+.sidebar-links {
+  margin: 1rem 0;
+}
+.sidebar-links .link {
+  text-transform: uppercase;
+  padding: 0.75rem 1rem;
+  font-size: 1.25rem;
+  letter-spacing: 3px;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  color: var(--clr-secondary);
+  font-weight: bold;
+  text-shadow: 1px 1px 1px var(--clr-body-bcg);
+  transition: var(--transition);
+}
+.sidebar-links .link:hover {
+  color: var(--clr-primary);
+  background: var(--clr-body-bcg-2);
+  padding-left: 1.5rem;
+  border-left: 4px solid var(--clr-primary);
+}
+.sidebar-icons {
+  margin: 2.5rem auto;
+  text-align: center;
+  padding: 0 2rem;
+}
+.icons-container {
+  padding: 1.5rem 2rem;
+  border: 4px solid var(--clr-primary);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  margin-top: 2rem;
+  background: var(--clr-body-bcg-2);
+  gap: 1rem 0;
+}
+.icons-container span {
+  display: none;
+}
+
+.sidebar-icons .social-icon {
+  transition: var(--transition);
+  font-size: 2rem;
+}
+
+.sidebar-icons .social-icon:hover {
+  color: var(--clr-primary);
+}
+.sidebar-icons .social-icon:hover .fa {
+  color: var(--clr-primary);
+  background: transparent;
+}
+
+@media screen and (min-width: 792px) {
+  .sidebar {
+    display: none;
+  }
+}
+
+
+
+
+header {
+  background: var(--hero-bcg);
+  overflow-x: hidden;
+}
+
+.banner {
+  min-height: calc(100vh - 72px - 48px);
+  display: grid;
+  place-items: center;
+  padding-bottom: 7rem;
+}
+
+.banner-container {
+  display: grid;
+}
+
+.hero-img {
+  display: none; /* Hide on smaller screens by default */
+  width: 25rem;
+}
+
+.hero-image {
+  width: 25rem;
+  height: 30rem;
+  object-fit: contain;
+}
+
+.hero-info {
+  text-align: center;
+}
+
+.hero-info h1 {
+  text-shadow: 1px 1px 1px var(--clr-primary);
+  font-family: var(--ff-primary);
+}
+
+#my-name span {
+  color: var(--clr-primary);
+  text-shadow: 1px 1px 1px var(--clr-font);
+}
+
+.hero-info p {
+  margin: 1.5rem 0;
+  margin-top: 0.5rem;
+}
+
+.hero-btn-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1rem;
+  text-align: center;
+  max-width: 30rem;
+  margin: 0 auto;
+}
+
+.hero-btn {
+  align-self: center;
+  border: 2px solid var(--clr-primary);
+  transition: all 0.5s ease-out;
+}
+
+.hero-btn:last-child {
+  background: transparent;
+  color: var(--clr-primary);
+}
+
+.hero-btn:hover {
+  background: transparent;
+  color: var(--clr-primary);
+}
+
+.hero-btn:last-child:hover {
+  background: var(--clr-primary);
+  color: var(--clr-white);
+}
+
+#my-name {
+  margin: 0 auto;
+  width: 100%; /* Make it more responsive */
+  max-width: 400px; /* Ensures it doesn't get too large */
+  white-space: nowrap;
+  opacity: 0;
+  line-height: 1.5;
+  animation: type 5s steps(20, end) 1, blink 0.95s step-end ; /* Updated animation */
+  animation-fill-mode: forwards;
+  border-right: 2px solid var(--clr-font);
+  overflow-x: hidden;
+}
+
+.scroll-widget {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.scroll-widget-img {
+  font-size: 30px;
+  color: #ff6f61;
+  transition: transform 0.3s ease-in-out;
+}
+
+.scroll-widget:hover .scroll-widget-img {
+  transform: scale(1.2);
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 768px) {
+  #my-name {
+    font-size: 2.5rem;
+    max-width: 520px;
+  }
+
+  .hero-btn-container {
+    column-gap: 2rem;
+  }
+}
+
+@media screen and (max-width: 548px) {
+  .hero-btn {
+    font-size: 0.75rem;
+  }
+
+  #my-name {
+    font-size: 2rem;
+    width: 320px;
+  }
+}
+
+
+@keyframes type {
+  0% {
+    width: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  15% {
+    border-color: transparent;
+  }
+  30% {
+    border-color: var(--clr-font);
+  }
+  45% {
+    border-color: transparent;
+  }
+  60% {
+    border-color: var(--clr-font);
+  }
+  75% {
+    border-color: transparent;
+  }
+  90% {
+    border-color: var(--clr-font);
+  }
+  100% {
+    border-color: transparent;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .banner-container {
+    grid-template-columns: 1fr auto;
+    gap: 3rem;
+    align-items: center;
+  }
+
+  .hero-img {
+    display: block; /* Show image on larger screens */
+  }
+
+  .hero-info {
+    text-align: left;
+  }
+
+  .hero-info p {
+    max-width: 40rem;
+  }
+
+  .hero-btn-container,
+  #my-name {
+    margin: 0;
   }
 }
